# compass

./: .gitignore  Dockerfile  cross_validate.py  pyproject.toml
api/: main.py  state.py
compass-net/: compass_ml.py
compass-net/data/: embedding_cache.py
compass-net/data/loaders/: load_easydesign.py
compass-net/scripts/: migrate_disc_model_format.py
compass-ui/: index.html
compass-ui/src/: App.jsx  ChipRender3D.jsx  index.css  mockData.js  tokens.js
compass-ui/src/components/: CandidateViewer.jsx  CollapsibleSection.jsx  Sidebar.jsx  Toast.jsx
compass-ui/src/components/ui/: index.jsx
compass-ui/src/hooks/: useIsMobile.js
compass-ui/src/pages/: HomePage.jsx  MethodsPage.jsx  MutationsPage.jsx  PanelsPage.jsx  PipelinePage.jsx  ResearchPage.jsx  ResultsPage.jsx  ScoringPage.jsx
compass-ui/src/utils/: api.js
compass/core/: config.py  constants.py
compass/pipeline/: runner.py
compass/scoring/: _netpath.py  compass_ml_scorer.py  computed_params.py  learned_discrimination.py
scripts/: diagnostic_mse_pool.py  download_references.py  download_references.sh
scripts/research/: bjepa_clustering.py  calibration_evaluation.py  discrimination_ablation.py
